--- a/villaride/style/scss/_basic.scss
+++ b/villaride/style/scss/_basic.scss
@@ -151,3 +151,53 @@ display: none;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 1) inset;
   }
 }
+.flip-horizontal-bottom {
+	-webkit-animation: flip-horizontal-bottom 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+	        animation: flip-horizontal-bottom 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+@-webkit-keyframes flip-horizontal-bottom {
+  0% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: rotateX(-90deg);
+    opacity: 1;
+
+  }
+  51% {
+    transform: rotateX(-90deg);
+    opacity: 0;
+  }
+  99% {
+    transform: rotateX(0);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+}
+@keyframes flip-horizontal-bottom {
+  0% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: rotateX(-90deg);
+    opacity: 1;
+
+  }
+  51% {
+    transform: rotateX(-90deg);
+    opacity: 0;
+  }
+  99% {
+    transform: rotateX(0);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+}
