--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -222,7 +222,7 @@
             }
             > .timer {
               height: 40px;
-              margin: 10px 0 0 0;
+              margin: 10px 0 15px 0;
               display: flex;
               justify-content: space-between;
               align-items: center;
