--- a/villaride/style/scss/_modals.scss
+++ b/villaride/style/scss/_modals.scss
@@ -53,7 +53,7 @@
     width: 95%;
     max-width: 800px;
     background-color: white;
-    background-image: url('../image/bg-modal.jpg');
+    background-image: url('../image/bg-modal.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
