--- a/uyut/style/index.css
+++ b/uyut/style/index.css
@@ -6467,8 +6467,8 @@ input {
 
 .navigation {
   height: 40px;
+  background-color: white;
   box-shadow: 0px 0px 10px 5px rgba(195, 195, 195, 0.3);
-  position: relative;
   z-index: 2;
 }
 .navigation > .header-navigation {
@@ -6493,17 +6493,7 @@ input {
   border-radius: 3px;
   transition: 0.3s;
 }
-@media (max-width: 905px) {
-  .navigation > .header-navigation > li {
-    padding: 0 10px 0 10px;
-  }
-}
-@media (max-width: 840px) {
-  .navigation > .header-navigation > li {
-    padding: 0 5px 0 5px;
-  }
-}
-@media (max-width: 670px) {
+@media (max-width: 720px) {
   .navigation > .header-navigation > li {
     padding: 0 10px 0 10px;
   }
@@ -6544,7 +6534,7 @@ input {
   color: white;
 }
 .navigation > .header-navigation > li:hover > .image {
-  transform: translateX(-80%);
+  transform: rotate(90deg);
 }
 .navigation > .header-navigation > .active {
   background: #1fb2f6;
@@ -6553,6 +6543,68 @@ input {
 }
 .navigation > .header-navigation > .active > a {
   color: white;
+}
+.navigation > .header-navigation .menu-btn {
+  position: relative;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list {
+  max-height: 750px;
+  max-width: 250px;
+  top: 100%;
+  left: calc((100% - 1200px)/2);
+  padding: 5px 0 5px 0;
+  list-style-type: none;
+  flex-direction: column;
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > li {
+  height: 55px;
+  background-color: white;
+  display: flex;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > li > div {
+  height: 100%;
+  width: 5px;
+  background-color: #f8f8f8;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > li > a {
+  height: 100%;
+  padding: 0 20px 0 20px;
+  display: flex;
+  align-items: center;
+  font-family: "Museo Sans Cyrl 300";
+  font-size: 1em;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > li:hover {
+  background-color: #f8f8f8;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > li:hover > div {
+  background: #1fb2f6;
+  background: linear-gradient(to bottom, #1fb2f6 0%, #0665a5 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#1fb2f6", endColorstr="#0665a5",GradientType=0 );
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > li:hover > a {
+  font-family: "Museo Sans Cyrl 700";
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > .active {
+  background-color: #f8f8f8;
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > .active > div {
+  background: #1fb2f6;
+  background: linear-gradient(to bottom, #1fb2f6 0%, #0665a5 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#1fb2f6", endColorstr="#0665a5",GradientType=0 );
+}
+.navigation > .header-navigation .menu-btn .drop-menu-list > .active > a {
+  font-family: "Museo Sans Cyrl 700";
+}
+.navigation > .header-navigation .menu-btn:hover > .drop-menu-list {
+  display: flex;
+}
+.navigation > .header-navigation > input[type=checkbox]:checked ~ .menu-btn > .drop-menu-list {
+  display: flex;
 }
 .navigation > .header-navigation-mobile {
   list-style-type: none;
@@ -6622,6 +6674,12 @@ input {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#1fb2f6", endColorstr="#0665a5",GradientType=0 );
   color: white;
   margin: 0 0 0 auto;
+}
+
+.top {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .nav-bottom {
@@ -6734,6 +6792,7 @@ input {
   background-repeat: no-repeat;
   background-position: center 20px;
   position: relative;
+  z-index: 1;
 }
 @media (max-width: 700px) {
   .block-1 {
@@ -6915,7 +6974,8 @@ input {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 180px 40px 150px 40px;
+  padding: 130px 40px 150px 40px;
+  margin: 50px 0 0 0;
 }
 @media (max-width: 700px) {
   .block-1 > .block-1-content > .block-1-content-right {
