--- a/uyut/style/scss/_block-1.scss
+++ b/uyut/style/scss/_block-1.scss
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-position: center 20px;
   position: relative;
+  z-index: 1;
   @media (max-width: 700px) { overflow: hidden; }
   > .block-1-content {
     @media (max-width: 700px) { flex-direction: column;}
@@ -137,7 +138,8 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      padding: 180px 40px 150px 40px;
+      padding: 130px 40px 150px 40px;
+      margin: 50px 0 0 0;
       @media (max-width: 700px) { align-self: center; }
       @media (max-width: 700px) { padding: 180px 20px 150px 20px; background-color: rgba(255,255,255,0.7); max-width: 100%;}
       > .title {
