--- a/velomall/style/scss/_basic.scss
+++ b/velomall/style/scss/_basic.scss
@@ -102,6 +102,14 @@ display: none;
   background: rgb(0,192,255);
   background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+  &:hover {
+    background: rgb(0,80,136);
+    background: linear-gradient(to bottom,  rgba(0,80,136,1) 0%,rgba(0,62,98,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#005088', endColorstr='#003e62',GradientType=0 );
+  }
+}
+.dark-blue-gradient {
+  
 }
 .yellow-gradient {
   background: rgb(255,228,0);
@@ -110,6 +118,11 @@ display: none;
   &:hover {
     background: rgb(255,228,0);
     background: linear-gradient(to bottom,  rgba(255,228,0,1) 0%,rgba(255,102,0,1) 18%,rgba(255,102,0,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe400', endColorstr='#ff6600',GradientType=0 ); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe400', endColorstr='#ff6600',GradientType=0 );
   }
+}
+.green-gradient {
+  background: rgb(59,229,0);
+  background: linear-gradient(to bottom,  rgba(59,229,0,1) 0%,rgba(37,172,0,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3be500', endColorstr='#25ac00',GradientType=0 );
 }
