--- a/velomall/style/scss/_main-nav.scss
+++ b/velomall/style/scss/_main-nav.scss
@@ -1,15 +1,19 @@
 .main-nav {
   height: 90px;
   width: 100%;
-  box-shadow: $shadow;
+  margin: 40px auto 0 auto;
   > .container {
     height: 100%;
+    box-shadow: $shadow;
     > a {
       height: 100%;
       padding: 0 15px 0 15px;
       border-radius: 3px;
       flex-grow: 1;
       transition: $transition;
+      &:not(:last-child){
+        margin: 0 1px 0 0;
+      }
       &:hover {
         background: rgb(0,192,255);
         background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
