--- a/velomall/style/scss/index.scss
+++ b/velomall/style/scss/index.scss
@@ -8,3 +8,11 @@
 @import "bicycles";
 @import "brands";
 @import "selection";
+@import "best-price";
+@import "questions";
+@import "videos";
+@import "news";
+@import "feedback";
+@import "contacts";
+@import "footer";
+@import "copyrights";
