--- a/velomall/style/scss/_feedback.scss
+++ b/velomall/style/scss/_feedback.scss
@@ -1,8 +1,9 @@
-.brands {
-  > .brands-title {
+.feedback {
+  > .feedback-title {
     width: 100%;
-    max-width: 540px;
-    margin: 50px auto 0 auto;
+    max-width: 400px;
+    margin: 50px auto 50px auto;
+    padding: 0 0 0 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,9 +33,8 @@
       }
     }
   }
-  > .brands-slider {
-    margin: 50px 0 50px 0;
-    height: 60px;
+  > .feedback-slider {
+    margin: 50px 0 0 0;
     position: relative;
     background-color: rgba(255,255,255,0.5);
     > .slider-left-arrow {
@@ -46,7 +46,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      top: 50%;
+      top: #{calc(50% - 15px)};
       left: #{calc((100% - 1110px) / 2)};
       transform: translateY(-50%) translateX(-100%);
       cursor: pointer;
@@ -74,7 +74,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      top: 50%;
+      top: #{calc(50% - 15px)};
       right: #{calc((100% - 1110px) / 2)};
       transform: translateY(-50%) translateX(100%);
       cursor: pointer;
@@ -97,50 +97,101 @@
       height: 100%;
       display: flex;
       justify-content: space-around;
-      padding: 0 10px 0 10px;
+      position: relative;
+      z-index: 10;
       > .card {
-        height: 100%;
-        max-width: 150px;
+        width: 100%;
+        max-width: 540px;
+        height: 280px;
+        border-radius: 5px;
+        overflow: hidden;
         position: relative;
-        cursor: pointer;
-        display: flex;
+        box-shadow: $shadow;
+        padding: 50px 20px 50px 50px;
         transition: $transition;
         &:hover {
-            transform: scale(1.1);
+          transform: scale(1.02);
         }
-        > .hover {
+        > h2 {
+          font-family: $f900;
+          font-size: 1.2em;
+        }
+        > h3 {
+          font-family: $f100;
+          font-size: 1.2em;
+        }
+        > h4 {
+          font-family: $f700;
+          font-size: 1em;
+          margin: 10px 0 10px 0;
+        }
+        > p {
+          font-family: $f100;
+          font-size: 1em;
+          color: grey;
+        }
+        > .decoration {
+          height: 80px;
+          width: 80px;
+          min-height: 80px;
+          min-width: 80px;
+          border-radius: 50px;
           position: absolute;
-          top: 0;
-          left: 0;
-          height: 100%;
-          width: 100%;
-          background-color: rgba(255,255,255,0);
+          top: 50px;
+          left: -55px;
         }
       }
-      > .left-out {
-        position: absolute;
-        left: #{calc((100% - 1110px)/2)};
-        top: 50%;
-        transform: translateY(-50%) translateX(-250px);
+    }
+    > .pagination {
+      height: 15px;
+      width: 100%;
+      margin: 30px 0 0 0;
+      display: flex;
+      justify-content: center;
+      > div {
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        background-color: #e5e5e5;
+        margin: 0 5px 0 5px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         &:hover {
-          transform: translateY(-50%) translateX(-250px);
+          background: rgba(0,192,255,0.3);
         }
-        > .hover {
-          background-color: rgba(255,255,255,0.8);
-        }
-      }
-      > .right-out {
-        position: absolute;
-        right: #{calc((100% - 1110px)/2)};
-        top: 50%;
-        transform: translateY(-50%) translateX(250px);
-        &:hover {
-          transform: translateY(-50%) translateX(250px);
-        }
-        > .hover {
-          background-color: rgba(255,255,255,0.8);
+        > div {
+          height: 7px;
+          width: 7px;
+          border-radius: 50%;
         }
       }
+      > .active {
+        background: rgba(0,192,255,0.3);
+        > div {
+          background: rgb(0,192,255);
+          background: linear-gradient(to bottom,  rgba(0,192,255,1) 0%,rgba(0,127,197,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c0ff', endColorstr='#007fc5',GradientType=0 );
+        }
+      }
+    }
+  }
+  > .feedback-button {
+    display: flex;
+    justify-content: center;
+    margin: 25px 0 0 0;
+    > button {
+      height: 45px;
+      min-height: 25px;
+      width: 100%;
+      max-width: 310px;
+      border: none;
+      border-radius: 25px;
+      color: white;
+      font-family: $f900;
+      font-size: 1em;
+      text-transform: uppercase;
     }
   }
 }
